implemented git-based resource provider